# RenderingPractice

./: CMakeLists.txt
dependencies/include/glad/: glad.h
src/: Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  glad.c  main.cpp  main.h
src/shaders/: fragment.frag  vertex.vert
